--- a/style/main.css
+++ b/style/main.css
@@ -202,7 +202,10 @@ input:focus {
 }
 
 .footer-right {
+    padding-right: 10px;
+    width:30vw;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: flex-end;
 }
